<resources>
    <string name="app_name">WhatDidILearn</string>
    <string name="title">Lorem Ipsum</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
        mollit anim id est laborum.</string>
    <string name="priority_low">LOW</string>
    <string name="priority_medium">MEDIUM</string>
    <string name="priority_high">HIGH</string>
    <string name="label_priority">Qual a prioridade da tarefa?</string>
    <string name="save">SALVAR</string>
    <string name="label_title">Informe um título</string>
    <string name="label_description">Informe uma descrição</string>
</resources>